commit 02 - add more pseudocode

--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+		<!-- pseudo 01 - initial standard meta and css links -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Multiplayer Rock Paper Scissors</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<!-- pseudo 01a - check all links - browser tab icon -->
 	<link rel="icon" type="image/ico" href="assets/images/favicon-rps.ico">
+		<!-- pseudo 01b - check all links - firebase -->
 	<script src="https://www.gstatic.com/firebasejs/3.2.1/firebase.js"></script>
 </head>
 <body>
 	<header>
 		Rock Paper Scissors
 	</header>
-
+		<!-- pseudo 01c - hard code skeleton (hcs) containers and input form/button -->
 	<div id="messagePanel">
 		<form>
 			<div>
@@ -77,7 +80,9 @@
 	<div id="chat">
 		
 	</div>
+		<!-- pseudo 01d - check all links - jq -->
 	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+		<!-- pseudo 01e - check all links - js -->
 	<script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 </html>
